Style: Fix table overflow

--- a/board-game-statistics/src/scss/custom.scss
+++ b/board-game-statistics/src/scss/custom.scss
@@ -23,7 +23,7 @@ $font-family-base: 'Montserrat';
 
 .scrollable-table {
 	max-height: 20rem;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #memberTable thead tr th {
